@@ -37,10 +37,10 @@ class JDocumentError extends JDocument
 	{
 		parent::__construct($options);
 
-		//set mime type
+		// Set mime type
 		$this->_mime = 'text/html';
 
-		//set document type
+		// Set document type
 		$this->_type = 'error';
 	}
 
@@ -84,11 +84,11 @@ class JDocumentError extends JDocument
 			return;
 		}
 
-		//Set the status header
+		// Set the status header
 		JResponse::setHeader('status', $this->_error->getCode() . ' ' . str_replace("\n", ' ', $this->_error->getMessage()));
 		$file = 'error.php';
 
-		// check template
+		// Check template
 		$directory = isset($params['directory']) ? $params['directory'] : 'templates';
 		$template = isset($params['template']) ? JFilterInput::getInstance()->clean($params['template'], 'cmd') : 'system';
 
@@ -97,13 +97,13 @@ class JDocumentError extends JDocument
 			$template = 'system';
 		}
 
-		//set variables
+		// Set variables
 		$this->baseurl = JURI::base(true);
 		$this->template = $template;
 		$this->debug = isset($params['debug']) ? $params['debug'] : false;
 		$this->error = $this->_error;
 
-		// load
+		// Load
 		$data = $this->_loadTemplate($directory . '/' . $template, $file);
 
 		parent::render();
