@@ -84,6 +84,7 @@ class JDocumentRendererModule extends JDocumentRenderer
 		}
 
 		$contents = '';
+
 		// Default for compatibility purposes. Set cachemode parameter or use JModuleHelper::moduleCache from within the
 		// module instead
 		$cachemode = $params->get('cachemode', 'oldstatic');
