@@ -38,10 +38,10 @@ class JDocumentJSON extends JDocument
 	{
 		parent::__construct($options);
 
-		//set mime type
+		// Set mime type
 		$this->_mime = 'application/json';
 
-		//set document type
+		// Set document type
 		$this->_type = 'json';
 	}
 
